# src/api-docs/openapi.json
@@ -16,12 +16,16 @@
   ],
   "tags": [
     {
+      "name": "authentication",
+      "description": "Everything about authentications"
+    },
+    {
       "name": "user",
       "description": "Everything about Users"
     },
     {
-      "name": "authentication",
-      "description": "Everything about authentications"
+      "name": "cellar",
+      "description": "Everything about Cellars"
     }
   ],
   "paths": {
@@ -58,7 +62,10 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/User"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/User"
+                  }
                 }
               }
             }
@@ -279,15 +286,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "type": "object",
-                    "properties": {
-                      "id": {
-                        "type": "integer"
-                      },
-                      "name": {
-                        "type": "string"
-                      }
-                    }
+                    "$ref": "#/components/schemas/Cellar"
                   }
                 }
               }
@@ -303,7 +302,9 @@
             "JWT": []
           }
         ]
-      },
+      }
+    },
+    "/user/newCellar/{uuid}": {
       "post": {
         "tags": [
           "user"
@@ -328,9 +329,6 @@
                 "type": "object",
                 "properties": {
                   "name": {
-                    "type": "string"
-                  },
-                  "userUUID": {
                     "type": "string"
                   }
                 }
@@ -362,7 +360,7 @@
         ]
       }
     },
-    "/user/cellars/{uuid}/{id}": {
+    "/user/removeCellar/{id}": {
       "delete": {
         "tags": [
           "user"
@@ -370,15 +368,6 @@
         "summary": "delete one user cellar",
         "description": "delete a cellar by uuid and id.",
         "parameters": [
-          {
-            "name": "uuid",
-            "in": "path",
-            "description": "The uuid of the user",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
           {
             "name": "id",
             "in": "path",
@@ -405,7 +394,7 @@
         ]
       }
     },
-    "/user/favouriteWines/{uuid}": {
+    "/user/favouriteWine/{uuid}": {
       "get": {
         "tags": [
           "user"
@@ -469,8 +458,8 @@
         "tags": [
           "user"
         ],
-        "summary": "Create a new favouriteWines for one user",
-        "description": "Returns the new favouriteWines.",
+        "summary": "Create a new favouriteWine for one user",
+        "description": "Returns the new favouriteWine.",
         "parameters": [
           {
             "name": "uuid",
@@ -488,7 +477,7 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "regionId": {
+                  "wineTypeId": {
                     "type": "integer"
                   },
                   "userUUID": {
@@ -502,11 +491,11 @@
         },
         "responses": {
           "200": {
-            "description": "The new FavouriteWines",
+            "description": "The new FavouriteWine",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/FavouriteWines"
+                  "$ref": "#/components/schemas/FavouriteWine"
                 }
               }
             }
@@ -523,13 +512,13 @@
         ]
       }
     },
-    "/user/favouriteWines/{uuid}/{id}": {
+    "/user/favouriteWine/{uuid}/{id}": {
       "delete": {
         "tags": [
           "user"
         ],
-        "summary": "delete one user favouriteWines",
-        "description": "delete a favouriteWines by uuid and id.",
+        "summary": "delete one user favouriteWine",
+        "description": "delete a favouriteWine by uuid and id.",
         "parameters": [
           {
             "name": "uuid",
@@ -543,7 +532,7 @@
           {
             "name": "id",
             "in": "path",
-            "description": "The id of the favouriteWines to delete",
+            "description": "The id of the favouriteWine to delete",
             "required": true,
             "schema": {
               "type": "integer"
@@ -657,6 +646,224 @@
           }
         }
       }
+    },
+    "/cellar": {
+      "get": {
+        "tags": [
+          "cellar"
+        ],
+        "summary": "Gets all cellars",
+        "description": "Returns a list containing all cellars.",
+        "parameters": [
+          {
+            "name": "offset",
+            "in": "query",
+            "description": "The number of items to skip before starting to collect the result set",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "The numbers of items to return",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of Cellar",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Cellar"
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Access token is missing or invalid",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
+      },
+      "post": {
+        "tags": [
+          "cellar"
+        ],
+        "summary": "Creates a callar",
+        "description": "Creates a cellar with request body parameters.",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string"
+                  },
+                  "userUUID": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Cellar created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Cellar"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Access token is missing or invalid",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "JWT-Admin": []
+          }
+        ]
+      }
+    },
+    "/cellar/{id}": {
+      "get": {
+        "tags": [
+          "cellar"
+        ],
+        "summary": "Get one cellar",
+        "description": "Returns the wanted cellar.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "The id of the wanted cellar",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The wanted cellar",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Cellar"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Access token is missing or invalid",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
+      },
+      "patch": {
+        "tags": [
+          "cellar"
+        ],
+        "summary": "update one cellar",
+        "description": "Returns the updated cellar",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "The id of the cellar to update",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "The number of modified objects"
+          },
+          "401": {
+            "description": "Access token is missing or invalid",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
+      },
+      "delete": {
+        "tags": [
+          "cellar"
+        ],
+        "summary": "delete one cellar",
+        "description": "delete a cellar by id.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "The id of the cellar to delete",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Request response"
+          },
+          "401": {
+            "description": "Access token is missing or invalid",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
+      }
     }
   },
   "components": {
@@ -667,28 +874,14 @@
           "uuid": {
             "type": "string"
           },
-          "firstname": {
+          "firstName": {
             "type": "string"
           },
-          "lastname": {
+          "lastName": {
             "type": "string"
           },
           "email": {
             "type": "string"
-          },
-          "age": {
-            "type": "integer"
-          },
-          "address": {
-            "type": "string"
-          },
-          "isSeller": {
-            "type": "boolean",
-            "default": false
-          },
-          "isAdmin": {
-            "type": "boolean",
-            "default": false
           },
           "createdAt": {
             "type": "string"
@@ -718,7 +911,27 @@
           }
         }
       },
-      "FavouriteWines": {
+      "favouriteRegion": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer"
+          },
+          "wineTypeId": {
+            "type": "integer"
+          },
+          "userUUID": {
+            "type": "string"
+          },
+          "createdAt": {
+            "type": "string"
+          },
+          "updatedAt": {
+            "type": "string"
+          }
+        }
+      },
+      "FavouriteWine": {
         "type": "object",
         "properties": {
           "id": {
